Migrate back to Swashbuckle
Migrate back to Swashbuckle from NSwag as it makes the migration to Microsoft.AspNetCore.OpenApi for .NET 9 easier.
