# src/API/ApiModule.cs
@@ -10,10 +10,8 @@ using System.Text;
 using System.Text.Json.Nodes;
 using MartinCostello.Api.Models;
 using MartinCostello.Api.OpenApi;
-using MartinCostello.Api.OpenApi.NSwag;
 using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
-using NSwag.Annotations;
 
 namespace MartinCostello.Api;
 
@@ -63,17 +61,20 @@ public static class ApiModule
         group.MapGet("/tools/guid", GenerateGuid)
              .WithName("Guid")
              .WithSummary("Generates a GUID.")
-             .WithDescription("Generates a new GUID in the specified format.");
+             .WithDescription("Generates a new GUID in the specified format.")
+             .Produces<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json");
 
         group.MapPost("/tools/hash", GenerateHash)
              .WithName("Hash")
              .WithSummary("Hashes a string.")
-             .WithDescription("Generates a hash of some plaintext for a specified hash algorithm and returns it in the required format.");
+             .WithDescription("Generates a hash of some plaintext for a specified hash algorithm and returns it in the required format.")
+             .Produces<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json");
 
         group.MapGet("/tools/machinekey", GenerateMachineKey)
              .WithName("MachineKey")
              .WithSummary("Generates a machine key.")
-             .WithDescription("Generates a machine key for a Web.config configuration file for ASP.NET.");
+             .WithDescription("Generates a machine key for a Web.config configuration file for ASP.NET.")
+             .Produces<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json");
 
         builder.MapGet("/version", static () =>
                 {
@@ -121,9 +122,7 @@ public static class ApiModule
     private static string BytesToHexString(ReadOnlySpan<byte> bytes)
         => Convert.ToHexString(bytes);
 
-    [NSwagOpenApiExample<TimeResponse>]
-    [OpenApiOperation("Gets the current UTC time.", "Gets the current date and time in UTC.")]
-    [SwaggerResponse(StatusCodes.Status200OK, typeof(TimeResponse), Description = "The current UTC date and time.")]
+    [OpenApiResponse(StatusCodes.Status200OK, "The current UTC date and time.")]
     private static Ok<TimeResponse> GetTime(TimeProvider timeProvider)
     {
         var formatProvider = CultureInfo.InvariantCulture;
@@ -141,12 +140,8 @@ public static class ApiModule
         return TypedResults.Ok(result);
     }
 
-    [NSwagOpenApiExample<GuidResponse>]
-    [NSwagOpenApiExample<ProblemDetails, ProblemDetailsExampleProvider>]
-    [OpenApiOperation("Generates a GUID.", "Generates a new GUID in the specified format.")]
-    [ProducesResponseType<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json")]
-    [SwaggerResponse(StatusCodes.Status200OK, typeof(GuidResponse), Description = "A GUID was generated successfully.")]
-    [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ProblemDetails), Description = "The specified format is invalid.")]
+    [OpenApiResponse(StatusCodes.Status200OK, "A GUID was generated successfully.")]
+    [OpenApiResponse(StatusCodes.Status400BadRequest, "The specified format is invalid.")]
     private static Results<Ok<GuidResponse>, ProblemHttpResult> GenerateGuid(
         [Description("The format for which to generate a GUID.")][OpenApiExample("D")] string? format,
         [Description("Whether to return the GUID in uppercase.")] bool? uppercase)
@@ -170,13 +165,8 @@ public static class ApiModule
         return TypedResults.Ok(new GuidResponse() { Guid = guid });
     }
 
-    [NSwagOpenApiExample<HashRequest>]
-    [NSwagOpenApiExample<HashResponse>]
-    [NSwagOpenApiExample<ProblemDetails, ProblemDetailsExampleProvider>]
-    [OpenApiOperation("Hashes a string.", "Generates a hash of some plaintext for a specified hash algorithm and returns it in the required format.")]
-    [ProducesResponseType<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json")]
-    [SwaggerResponse(StatusCodes.Status200OK, typeof(HashResponse), Description = "The hash was generated successfully.")]
-    [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ProblemDetails), Description = "The specified hash algorithm or output format is invalid.")]
+    [OpenApiResponse(StatusCodes.Status200OK, "The hash was generated successfully.")]
+    [OpenApiResponse(StatusCodes.Status400BadRequest, "The specified hash algorithm or output format is invalid.")]
     private static Results<Ok<HashResponse>, ProblemHttpResult> GenerateHash(HashRequest? request)
     {
         if (request == null)
@@ -245,12 +235,8 @@ public static class ApiModule
         return TypedResults.Ok(result);
     }
 
-    [NSwagOpenApiExample<MachineKeyResponse>]
-    [NSwagOpenApiExample<ProblemDetails, ProblemDetailsExampleProvider>]
-    [OpenApiOperation("Generates a machine key.", "Generates a machine key for a Web.config configuration file for ASP.NET.")]
-    [ProducesResponseType<ProblemDetails>(StatusCodes.Status400BadRequest, "application/problem+json")]
-    [SwaggerResponse(StatusCodes.Status200OK, typeof(MachineKeyResponse), Description = "The machine key was generated successfully.")]
-    [SwaggerResponse(StatusCodes.Status400BadRequest, typeof(ProblemDetails), Description = "The specified decryption or validation algorithm is invalid.")]
+    [OpenApiResponse(StatusCodes.Status200OK, "The machine key was generated successfully.")]
+    [OpenApiResponse(StatusCodes.Status400BadRequest, "The specified decryption or validation algorithm is invalid.")]
     private static Results<Ok<MachineKeyResponse>, ProblemHttpResult> GenerateMachineKey(
         [Description("The name of the decryption algorithm.")][OpenApiExample("AES-256")] string? decryptionAlgorithm,
         [Description("The name of the validation algorithm.")][OpenApiExample("SHA1")] string? validationAlgorithm)
